--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
             "database/factories"
         ],
         "files": [
-          "app/helpers.php"
+          "app/helpers.php",
+          "app/common.php"
         ]
     },
     "autoload-dev": {
